--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-nadines-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/beaulazear/nadineswebsite.git",
+  "homepage": "https://github.com/beaulazear/nadine.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
